Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- simpler logout process
Bug fixes:
~~~~~~~~~~
- Missing ACL on members confirm password field.
- Removed duplicate CSS definitions + added better default styling for buttons.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Leverage new 'View status history' permission.