@@ -9,5 +9,6 @@ Bug fixes:
 - Missing ACL on members confirm password field.
 - Removed duplicate CSS definitions + added better default styling for buttons.
 New internal features:
+- KeyError 'logger' in upgrade steps
 ~~~~~~~~~~~~~~~~~~~~~~
 - Leverage new 'View status history' permission.
